--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="mapmarker.css">
     <div class="frame">
         <div class="center" >
-            <!-- <input type="checkbox" name="flipped" id="flipped"> -->
+            <input type="checkbox" name="flipped" id="flipped">
             <svg class="land" viewBox="0 0 100 100">
                 <path d="M0,100 L0,70 Q35,40 25,30 Q21,21 35,17 C45,35 55,0 65,15 Q70,20 80,10 Q90,5 100,14 L100,45 L90,55 Q88,80 70,80 L67,75 Q68,55 50,75 Q45,85 47,80 Q49,95 35,100 z" />
             </svg>
